`jcog/rl` cleanup