@@ -1,13 +1,12 @@
-package jcog.tensor.rl.pg3;
+package jcog.tensor.rl.pg2;
 
 import jcog.tensor.Tensor;
 import jcog.tensor.rl.pg.util.Experience2;
-import jcog.tensor.rl.pg3.configs.PPOAgentConfig;
-import jcog.tensor.rl.pg3.memory.AgentMemory;
-import jcog.tensor.rl.pg3.memory.OnPolicyBuffer;
-import jcog.tensor.rl.pg3.networks.GaussianPolicyNet;
-import jcog.tensor.rl.pg3.networks.ValueNet;
-import jcog.tensor.rl.pg3.util.AgentUtils;
+import jcog.tensor.rl.pg2.configs.PPOAgentConfig;
+import jcog.tensor.rl.pg2.memory.OnPolicyBuffer;
+import jcog.tensor.rl.pg2.networks.GaussianPolicyNet;
+import jcog.tensor.rl.pg2.networks.ValueNet;
+import jcog.tensor.rl.pg2.util.AgentUtils;
 
 import java.util.List;
 import java.util.Objects;
@@ -20,13 +19,12 @@ public class PPOAgent extends BasePolicyGradientAgent {
     public final ValueNet valueFunction;
     public final Tensor.Optimizer policyOptimizer;
     public final Tensor.Optimizer valueOptimizer;
-    public final AgentMemory memory;
 
     private final Tensor.GradQueue policyGradQueue;
     private final Tensor.GradQueue valueGradQueue;
 
     public PPOAgent(PPOAgentConfig config, int stateDim, int actionDim) {
-        super(stateDim, actionDim);
+        super(stateDim, actionDim, new OnPolicyBuffer(config.memoryConfig().episodeLength().intValue()));
         Objects.requireNonNull(config, "Agent configuration cannot be null");
         this.config = config;
 
@@ -35,8 +33,6 @@ public class PPOAgent extends BasePolicyGradientAgent {
 
         this.policyOptimizer = config.policyNetworkConfig().optimizer().build();
         this.valueOptimizer = config.valueNetworkConfig().optimizer().build();
-
-        this.memory = new OnPolicyBuffer(config.memoryConfig().episodeLength().intValue());
 
         this.policyGradQueue = new Tensor.GradQueue();
         this.valueGradQueue = new Tensor.GradQueue();
@@ -71,24 +67,6 @@ public class PPOAgent extends BasePolicyGradientAgent {
     }
 
     @Override
-    public void recordExperience(Experience2 experience) {
-        Objects.requireNonNull(experience, "Experience object cannot be null.");
-        Objects.requireNonNull(experience.oldLogProb(), "Experience for PPO agent must include oldLogProb.");
-         if (!this.trainingMode) {
-            return; // Do not record or update if not in training mode
-        }
-        this.memory.add(experience);
-
-        boolean bufferFull = this.memory.size() >= config.memoryConfig().episodeLength().intValue();
-
-        if (bufferFull) {
-            update(0);
-            this.memory.clear();
-        }
-        // Optional: else if (experience.done() && this.memory.size() > 0) { update on early done }
-    }
-
-    @Override
     public void update(long totalSteps) {
         if (!this.trainingMode || this.memory.size() == 0) {
             return;
@@ -107,7 +85,7 @@ public class PPOAgent extends BasePolicyGradientAgent {
             Tensor values = this.valueFunction.apply(states);
 
             Tensor lastNextValue;
-            Experience2 lastExp = batch.get(batch.size() - 1);
+            Experience2 lastExp = batch.getLast();
             if (!lastExp.done() && lastExp.nextState() != null) {
                  lastNextValue = this.valueFunction.apply(lastExp.nextState());
             } else {
@@ -199,6 +177,8 @@ public class PPOAgent extends BasePolicyGradientAgent {
     @Override public Object getPolicy() { return this.policy; }
     @Override public Object getValueFunction() { return this.valueFunction; }
     @Override public Object getConfig() { return this.config; }
+
+
 
     @Override
     public void setTrainingMode(boolean training) {
